--- a/index.html
+++ b/index.html
@@ -22,18 +22,13 @@
                     <div>
 
                         <h1 class="mt-5">
-                            Page not <span class="fw-bolder text-orange">found</span>
+                            Page not <span class="fw-bolder text-orange">founds</span>
                         </h1>
                         <p class="lead my-4">
                             Oops! Looks like you followed a bad link. If you think this is
                             a problem with us, please tell us.
                         </p>
-                        <a
-                                class="btn btn-dark animate-hover text-orange"
-                                href="#"
-                        ><i class="fas fa-chevron-left me-3 ps-2 animate-left-3"></i
-                        >Go back home</a
-                        >
+
                     </div>
                 </div>
             </div>
