--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         </h1>
                         <p class="lead my-4">
                             Oops! Looks like you followed a bad link. If you think this is
-                            a problem with us, please tell us.
+                            a problem with us, please tell us. s
                         </p>
 
                     </div>
