--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                     <div>
 
                         <h1 class="mt-5">
-                            Page not <span class="fw-bolder text-orange">founds</span>
+                            Page not <span class="fw-bolder text-orange">found</span>
                         </h1>
                         <p class="lead my-4">
                             Oops! Looks like you followed a bad link. If you think this is
-                            a problem with us, please tell us. s
+                            a problem with us, please tell us.
                         </p>
 
                     </div>
