--- a/index.html
+++ b/index.html
@@ -1,39 +1,188 @@
+<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Page not found!</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        .text-orange{
-            color: #E93E21;
+        .container-download-app {
+            /* background-color: #FAEBD7; */
+            border-radius: 5px;
+            padding: 20px 5px;
+            background: -moz-linear-gradient(53deg, rgba(153,218,255,1) 0%, rgba(255,166,0,1) 100%);
+            background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, #99DAFF), color-stop(100%, #FFA600));
+            background: -webkit-linear-gradient(53deg, #99DAFF 0%, #FFA600 100%);
+            background: -o-linear-gradient(53deg, rgba(153,218,255,1) 0%, rgba(255,166,0,1) 100%);
+            background: -ms-linear-gradient(53deg, rgba(153,218,255,1) 0%, rgba(255,166,0,1) 100%);
+            background: linear-gradient(37deg, #99DAFF 0%, #FFA600 100%);
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FFA600', endColorstr='#99DAFF',GradientType=0 );
         }
+
+        .container-download-app h1 {
+            font-weight: 600;
+            font-style: italic;
+            color: white;
+        }
+
+        .container-download-app h4 {
+            font-weight: 600;
+            color: white;
+        }
+
+        .container-download-app img {
+            max-width: 100%;
+        }
+
+        .container-download-app > div:nth-child(2){
+            margin-top: 20px;
+        }
+
+
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200&display=swap');
+
+
+        .button {
+            background-color: #0780ad;
+            border: none;
+            color: white;
+            padding: 10px 13px 15px 15px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            font-family: 'Montserrat', sans- serif;
+            border-radius: 30px;
+            width: 145px;
+            height: 50px;
+        }
+
+
+        .psicon {
+            position: relative;
+            top: 3px;
+            fill: white;
+            width: 18px;
+            margin-right: 8px;
+        }
+
+        .asicon {
+            position: relative;
+            top: 4px;
+            fill: white;
+            width: 18px;
+            margin-right: 10px;
+        }
+
+        .container {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+        }
+
+        .buttons {
+            margin-top: 20px;
+            margin-bottom: 10px;
+        }
+
+        .appstorebutton {
+            margin-right: 20px;
+        }
+
+        .storeicon
+        .text {
+            margin-top: 20px;
+            margin-bottom: 0px;
+            display: inline-block;
+            padding: 10px;
+            font-size: 25px;
+            font-family: 'Montserrat', sans- serif;
+
+        }
+
+        .logo {
+            margin-top: 30px;
+        }
+
+        .list {
+            font-size: 15px;
+            font-family: 'Montserrat', sans-serif;
+        }
+        .items {
+            text-align: center;
+        }
+
+        .items a {
+            display: inline-block;
+            margin: 0 10px;
+        }
+
+        .items a img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            border-radius: 13px;
+        }
+
+        @media (max-width: 600px) {
+            .items a {
+                display: block;
+                margin: 10px 0;
+            }
+        }
+
+        .itemLists {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        ul {
+            list-style: disc inside;
+            padding-left: 20px;
+        }
+
+        li {
+            font-size: 18px;
+            margin-bottom: 10px;
+            line-height: 1.5;
+        }
+
+        @media (max-width: 600px) {
+            li {
+                font-size: 16px;
+            }
+        }
+
     </style>
 </head>
 <body>
-<main>
-    <section class="vh-100 d-flex align-items-center justify-content-center">
-        <div class="container">
-            <div class="row">
-                <div
-                        class="col-12 text-center d-flex align-items-center justify-content-center"
-                >
-                    <div>
+<div class="container">
+    <div class="items logo">
+        <img src="logo.png">
 
-                        <h1 class="mt-5">
-                            Page not <span class="fw-bolder text-orange">found</span>
-                        </h1>
-                        <p class="lead my-4">
-                            Oops! Looks like you followed a bad link. If you think this is
-                            a problem with us, please tell us.
-                        </p>
+    </div>
 
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-</main>
+    <div class="items buttons">
+        <a target="_blank" href="https://apps.apple.com/eg/app/sigma/id1587396096" class="btn btn-app-store">
+            <img src="App-Store.png" alt="App Store"  />
+        </a>
+        <a target="_blank" href="https://play.google.com/store/apps/details?id=com.smart.sigma.new" class="btn btn-app-store">
+            <img src="Android app.jpg" alt="Android App" />
+        </a>
+    </div>
+
+
+
+    <div class="itemLists list">
+        <ul>
+            <li>Access a Sigma app for your study materials.</li>
+            <li>Set personalized study goals and track your progress.</li>
+            <li>Collaborate with peers on group study materials.</li>
+            <li>Receive real-time notifications for important study events.</li>
+            <li>Access the app on Android and iOS devices.</li>
+            <li>Enjoy a user-friendly and intuitive interface.</li>
+        </ul>
+    </div>
+</div>
+
+
 </body>
 </html>
